--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 <a href="./public/movie-ranking.html"> Movie Ranking Project</a>
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-<img src ="assets/images/Movies.jpg/" />
+<img src ="./assets/images/Movies.jpg/" />
 <br />
 <!-- TODO 4: Add titles/subtitles etc. -->
 <a href="./public/birthday-invite.html"> Birth day invite</a>
 <br />
 <!-- TODO 5: Add a link to the project pages -->
-<img src ="assets/images/Bday.jpg" />
+<img src ="./assets/images/Bday.jpg" />
 <!-- TODO 6: Add images to show the project previews
 HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
