--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <hr />
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-<a href="./public/movie-ranking.html"> Movie Ranking Project</a>
+<a href="./public/movie-ranking.html"> <img src ="./assets/images/Movies.jpg/" /> Movie Ranking Project</a>
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
 <img src ="./assets/images/Movies.jpg/" />
 <br />
