--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -2,8 +2,7 @@
 <h1>It's My Birthday!</h1>
 <h2>On the 12th May</h2>
 
-<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
-  alt="purple birthday cake with candles" />
+<img src ="./assets/images/Bday.jpg" />
 
 <h3>What to bring:</h3>
 <ul>
