--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <hr />
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-<a href="./public/movie-ranking.html"> <img src ="./assets/images/Bday.jpg" /></a>
+<a href="./public/movie-ranking.html"> Movie Ranking Website</a>
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-<img src ="./assets/images/Movies.jpg/" />
+<img src ="./assets/images/Bday.jpg" />
 <br />
 <!-- TODO 4: Add titles/subtitles etc. -->
 <a href="./public/birthday-invite.html"> Birth day invite</a>
