birthday-invite.html

--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -2,7 +2,7 @@
 <h1>It's My Birthday!</h1>
 <h2>On the 12th May</h2>
 
-<img src ="./assets/images/Bday.jpg" />
+<img src ="../assets/images/birthday-invite.png" />
 
 <h3>What to bring:</h3>
 <ul>
