--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sushma's Professional World</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
 </head>
@@ -26,12 +26,12 @@
              REST APIs for robust backend functionality. I'm enthusiastic about version control with GitHub 
              and leverage Express middleware to enhance performance. Let's connect and Bring innovative ideas to life through technology!
             </p>
-            <button type = "button" class = "botton black-shadow mb-2 btn btn-dark">Portfoilo</button>
+            <button id = "PortfoiloBnt" type = "button" class = "botton black-shadow mb-2 btn btn-dark">Portfoilo</button>
 
 
         </div>
     </div>
-    <div class="PortfoiloSec">
+    <div class="PortfoiloSec" id ="PortfoiloSec" style="display: none;">
         <h1 class="secHeading"><strong>WEBSITES</strong></h1>
         <div class="darbySec">
             <div>
@@ -45,10 +45,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script>
-        $("button").on ("click", function(){
-            $("h4").hide();
-        });
-    </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
